--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,6 @@ body{
 }
 
 .container{
-
   position: relative;
 }
 
@@ -47,39 +46,204 @@ width: 73%;
 
 @media  screen and (min-width:320px) and (max-width:568px) {
   
+
+  .container{
+    font-size: 14px;
+  }
+
+
+.back-of-card{
+  position: absolute;
+  left: 120px;
+  top: 30px;
+  }
+  .back-of-card img{
+  width: 87%;
+  }
+  
+  .back-of-card p{
+    position: absolute;
+  top: 35px;
+  left: 121px;
+  }
+  
+  .front-of-card{
+    position: absolute;
+    top: 91px;
+    left: 72px;
+  }
+  
+  .front-of-card img{
+  width: 73%;
+  }
 }
 
 @media  screen and (min-width:360px){
  
-  
+
+   
+  .back-of-card p{
+    position: absolute;
+  top: 44px;
+  left: 143px;
+  }
+
+
+  .front-of-card{
+    position: absolute;
+    top: 100px;
+    left: 72px;
+  }
 }
 
 
 @media screen and (min-width:375px) and (max-width:812px){
- 
+
+   
+  .back-of-card p{
+    position: absolute;
+  top: 48px;
+  left: 155px;
+  }
+
+  .front-of-card{
+    position: absolute;
+    top: 106px;
+    left: 72px;
+  }
+
 }
 
 @media screen and (min-width:400px)  {
   
+   
+  .back-of-card p{
+    position: absolute;
+  top: 53px;
+  left: 175px;
+  }
+
+  .front-of-card{
+    position: absolute;
+    top: 111px;
+    left: 72px;
+  }
   
 }
 
 
 @media screen and (min-width:600px){
+  .container{
+    font-size: 24px;
+  }
 
+
+.back-of-card{
+  position: absolute;
+  left: 240px;
+  top: 140px;
+  }
+
+  .back-of-card img{
+  width: 87%;
+  }
+  
+  .back-of-card p{
+    position: absolute;
+  top: 92px;
+  left: 261px;
+  }
+  
+  .front-of-card{
+    position: absolute;
+    top: 265px;
+    left: 150px;
+  }
+  
+  .front-of-card img{
+  width: 87%;
+  }
 }
 
 
 
 
 @media screen and (min-width:760px){
- 
+  body{
+    height: 100vh;
+    background-image: url('/src/images/bg-main-desktop.png');
+    background-repeat: no-repeat;
+    background-size: 25% 100%;
+  }
+  
+  .container{
+    position: relative;
+  }
+  
+  
+  .back-of-card{
+  position: absolute;
+  left: 168px;
+  top: 393px;
+  }
+  .back-of-card img{
+  width: 75%;
+  }
+  
+  .back-of-card p{
+    position: absolute;
+  top: 80px;
+  left: 246px;
+  }
+  
+  .front-of-card{
+    position: absolute;
+    top: 107px;
+    left: 72px;
+  }
+  
+  .front-of-card img{
+  width: 75%;
+  }
+  
+  
 }
 
 
 
 @media  screen and (min-width:800px) and (max-width:1080px){
  
+  .container{
+    font-size: 24px;
+  }
+
+
+.back-of-card{
+  position: absolute;
+  left: 338px;
+  top: 183px;
+  }
+
+  .back-of-card img{
+  width: 87%;
+  }
+  
+  .back-of-card p{
+    position: absolute;
+  top: 92px;
+  left: 281px;
+  }
+  
+  .front-of-card{
+    position: absolute;
+    top: 311px;
+    left: 236px;
+  }
+  
+  .front-of-card img{
+  width: 87%;
+  }
+
 
 }
  
