--- a/src/App.css
+++ b/src/App.css
@@ -211,8 +211,15 @@ width: 73%;
 
 
 
-@media  screen and (min-width:800px) and (max-width:1080px){
+@media  screen and (min-width:800px) {
  
+  body{
+    height: 100vh;
+    background-image: url('/src/images/bg-main-mobile.png');
+    background-repeat: no-repeat;
+    background-size:  100%;
+  }
+
   .container{
     font-size: 24px;
   }
