--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@ body{
   background-image: url('/src/images/bg-main-mobile.png');
   background-repeat: no-repeat;
   background-size: 100%;
+  font-family: Space Grotesk;
 }
 
 .container{
